# main.go
@@ -6,14 +6,18 @@ import (
 	"fmt"
 	"log"
 	"net/http"
+	"time"
 
 	cntr "github.com/Adebusy/dataScienceAPI/controller"
 	cr "github.com/Adebusy/dataScienceAPI/crudal"
 	"github.com/Adebusy/dataScienceAPI/docs"
+	"github.com/Adebusy/dataScienceAPI/model"
 	ut "github.com/Adebusy/dataScienceAPI/utilities"
 	_ "github.com/denisenkom/go-mssqldb"
 	"github.com/gin-gonic/gin"
 	_ "github.com/go-sql-driver/mysql"
+	"github.com/jinzhu/gorm"
+	_ "github.com/jinzhu/gorm/dialects/mssql"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/swag/example/celler/httputil"
@@ -23,6 +27,9 @@ import (
 var db *sql.DB
 var err error
 
+var dbGorm *gorm.DB
+var errGorm error
+
 func init() {
 	db, err = cr.ConnectMe()
 	if err != nil {
@@ -30,6 +37,20 @@ func init() {
 	} else {
 		fmt.Println("no connection error")
 	}
+	dbGorm, errGorm := cr.ConnectGorm() //gorm.Open("mssql", "sqlserver://dbuser:Sterling123@sterlingazuredb.database.windows.net?database=newedupaydb")
+	if errGorm != nil {
+		fmt.Printf(errGorm.Error())
+	} else {
+		//fmt.Println("mo connect ")
+		//dbGorm.Debug().DropTableIfExists(&model.TblTestNewResult{})
+		//dbGorm.SingularTable(true)
+		//dbGorm.Debug().AutoMigrate(&model.TblTestNewResult{})
+	}
+	insertTest := model.TblTestNewResult{DateTaken: time.Now().Local(), StudentID: "alaoh.adebusy@gmail.com", TestID: "1203", TestResult: "6004"}
+	dbGorm.Create(&insertTest)
+	//dbGorm.Last(&insertTest)
+	//fmt.Println(insertTest.ID)
+
 }
 
 // @title Data Science Central API
@@ -59,6 +80,7 @@ func main() {
 	r.POST("/user/UpdateUserDetail/", cntr.UpdateUserDetail)
 	r.GET("/user/GetUserFullInfo/:EmailAddress", cntr.GetUserFullInfo)
 	r.POST("/question/CreateNewQuestion/", cntr.CreateNewQuestion)
+	r.POST("/question/TestResult/", cntr.TestResult)
 	r.GET("/question/FetchQuestionsByCourse/:StudentID/:CourseName", cntr.FetchQuestionsByCourse)
 	r.Run(ut.GoDotEnvVariable("AppPort"))
 }
