# model/question.go
@@ -1,5 +1,7 @@
 package model
 
+import "time"
+
 //Question list of  entity
 type Question struct {
 	CourseName    string `json:"CourseName" validate:"omitempty"`
@@ -36,4 +38,28 @@ type QuisRequest struct {
 	MyQuestion     []*Questions
 	StudentDetails Students
 	CourseDetails  Courses
+}
+
+//TestResult of students
+type TestResult struct {
+	StudentID  string `json:"StudentID" validate:"omitempty"`
+	TestID     string `json:"TestID" validate:"omitempty"`
+	TestResult string `json:"TestResult" validate:"omitempty"`
+}
+
+//TblTestNewResult of students
+type TblTestNewResult struct {
+	ID         int `gorm:"primary_key;auto_increment:true"`
+	StudentID  string
+	TestID     string
+	TestResult string
+	DateTaken  time.Time //time.Time
+}
+
+//CREATE TABLE "tbl_test_result" ("ID" INTEGER,"student_id" VARCHAR(255),"test_id" VARCHAR(255),"test_result" VARCHAR(255),"date_taken" VARCHAR(255) )
+//	ID              int    `json:"ID" validate:"omitempty"`
+//RequestResponse response
+type RequestResponse struct {
+	ResponseMessage string `json:"ResponseMessage" validate:"omitempty"`
+	ResponseCode    string `json:"ResponseCode" validate:"omitempty"`
 }
